# autodoc

./: .env.bstack  .env.bstack.example  .env.example  .env.local_emulator  .env.local_emulator.example  .env.mobile_example  .gitignore  README.md  project.py  pyproject.toml
autodoc_project/api/: board_api.py
autodoc_project/data/: cars.py
autodoc_project/pages/: main_page.py
autodoc_project/pages/mobile_pages/: main_page_mobile.py
autodoc_project/pages/ui_pages/: main_page.py
scheme/: cart_scheme.json  main_page_auth_user_scheme.json  main_page_json_scheme.json  request_by_vin_scheme.json  search_by_vin_number_scheme.json
tests/: conftest.py  test_autodoc_main_page.py  test_autodoc_unregistered_user.py
tests/api/: conftest.py  test_add_item_to_cart.py  test_authorization_user.py  test_search_by_title.py  test_search_by_vin_number.py
tests/mobile/: conftest.py  test_add_item_to_cart.py  test_authorization.py  test_search_product.py
tests/ui/: conftest.py  test_autodoc_auth_user.py  test_autodoc_main_page.py  test_autodoc_unregistered_user.py
tests/ui_api/: conftest.py  test_search_item_by_auth_user.py
utils/: attach.py  attach_mobile.py  logger.py  resource.py  validator_json.py
